--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "vite preview --host 0.0.0.0 --port ${PORT:-5173}"
+    "start": "vite preview --host 0.0.0.0 --port ${PORT:-5173}",
+    "serve:backend": "ts-node src/server.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
@@ -29,7 +30,11 @@
     "tesseract.js": "^6.0.1",
     "tiff.js": "^1.0.0",
     "utif2": "^4.1.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.3",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
