--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,26 @@
 version: '3.8'
 
 services:
-  morphyimg:
-    build:
-      context: .
-      dockerfile: docker/Dockerfile
+  backend:
+    build: ./backend
     ports:
-      - "3000:80"
+      - "3000:3000"
     environment:
-      - NODE_ENV=production
-    restart: unless-stopped
-    
-  # Optional: Add a reverse proxy with SSL
-  nginx-proxy:
-    image: nginx:alpine
-    ports:
-      - "80:80"
-      - "443:443"
+      - NODE_ENV=development
+      - FRONTEND_URL=http://localhost:5173
     volumes:
-      - ./docker/proxy.conf:/etc/nginx/conf.d/default.conf
+      - ./backend/src:/app/src
+    restart: unless-stopped
+
+  frontend:
+    build: .
+    ports:
+      - "5173:5173"
+    environment:
+      - VITE_API_BASE_URL=http://localhost:3000
+    volumes:
+      - .:/app
+      - /app/node_modules
     depends_on:
-      - morphyimg
+      - backend
     restart: unless-stopped
