--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "vite preview --host 0.0.0.0 --port ${PORT:-5173}"
+    "start": "vite preview --host 0.0.0.0 --port ${PORT:-5173}",
+    "docker:dev": "docker-compose up --build",
+    "docker:backend": "cd backend && npm run dev"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
