--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "vite preview --host 0.0.0.0 --port ${PORT:-5173}",
-    "docker:dev": "docker-compose up --build",
-    "docker:backend": "cd backend && npm run dev"
+    "start": "vite preview --host 0.0.0.0 --port ${PORT:-5173}"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
