--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -1,12 +1,7 @@
 node_modules
-npm-debug.log
 dist
+npm-debug.log
 .git
-.gitignore
-README.md
 .env
-.nyc_output
-coverage
-.vscode
-.idea
-*.log
+.DS_Store
+
