--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,24 @@
 version: '3.8'
 
 services:
-  backend:
-    build: ./backend
+  morphyimg:
+    build:
+      context: .
+      dockerfile: docker/Dockerfile
     ports:
-      - "3000:3000"
+      - "3000:80"
     environment:
-      - NODE_ENV=development
-      - FRONTEND_URL=http://localhost:5173
-    volumes:
-      - ./backend/src:/app/src
+      - NODE_ENV=production
     restart: unless-stopped
-
-  frontend:
-    build: .
+    
+  # Optional: Add a reverse proxy with SSL
+  nginx-proxy:
+    image: nginx:alpine
     ports:
-      - "5173:5173"
-    environment:
-      - VITE_API_BASE_URL=http://localhost:3000
+      - "80:80"
+      - "443:443"
     volumes:
-      - .:/app
-      - /app/node_modules
+      - ./docker/proxy.conf:/etc/nginx/conf.d/default.conf
     depends_on:
-      - backend
+      - morphyimg
     restart: unless-stopped
